--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,5 +1,4 @@
 <section>
   <h1>About Me</h1>
-  <p>I'm Software Engineering Manager at VeriSign, Inc. If you
-need to reach me, you can email me at <a href="mailto:smountcastle@gmail.com">smountcastle@gmail.com</a>.</p>
+  <p>A little something about me.</p>
 </section>
