--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,8 +1,4 @@
 <p>
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
-  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
-  <br />
-  <a href="https://twitter.com/smountcastle" class="twitter-follow-button">You should follow me on Twitter</a>
+  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} <br/>
+  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a>, customized with <a href="https://github.com/mjhea0/whiterspace">whiterspace</a>.</span>
 </p>
-
-<script src="//platform.twitter.com/widgets.js" type="text/javascript"></script>
